RESOLVED FIXED248893
Define and add new Error to surface failed main resource loads from privacy proxy
https://bugs.webkit.org/show_bug.cgi?id=248893
Summary Define and add new Error to surface failed main resource loads from privacy p...
Matthew Finkel
Reported 2022-12-07 11:09:44 PST
Add a new userinfo entry.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-07 11:09:59 PST
Matthew Finkel
Comment 2 2022-12-09 13:50:02 PST
EWS
Comment 3 2022-12-09 19:27:20 PST
Committed 257664@main (6d48ee17b326): <https://commits.webkit.org/257664@main> Reviewed commits have been landed. Closing PR #7408 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.