[cocoa] Define and add new Error to surface failed main resource loads from privacy proxy https://bugs.webkit.org/show_bug.cgi?id=248893 rdar://problem/103082081

Reviewed by Wenson Hsieh.

Expose the provided "privacy stance" in the NSError as a userinfo dictionary
entry;

Tested manually.

* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(privacyStanceToString):
(-[WKNetworkSessionDelegate URLSession:task:didCompleteWithError:]):

Canonical link: https://commits.webkit.org/257664@main